Added all routes except Event routes.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/tojj/tojj-api#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.0.0",
     "dotenv": "^8.0.0",
