--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-proxy-middleware": "^0.19.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.1",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.2.1",
     "nodemon": "^1.19.1",
     "serve": "^11.0.2"
