--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "http-proxy-middleware": "^0.19.1",
+    "lodash": "^4.17.14",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.1",
     "node-schedule": "^1.3.2",
